fixed whitegap on homepage

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -902,7 +902,6 @@ img#fb-signup-bg{
 }
 
 #hp_transparent{
-  margin-top: -100px;
   margin-bottom: -314px;
   z-index: 1;
 }
@@ -915,6 +914,7 @@ img#fb-signup-bg{
 .featured-content {
   position: relative;
   float: left;
+  margin-top: -5px;
   padding-bottom: 20px;
 }
 
